--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,9 @@ text-align: center;
 }
 
 /* --------------------------team */
+.team{
+    padding-bottom: 94px;
+}
 .team .container{
     display: flex;
     flex-direction: column;
@@ -232,11 +235,23 @@ color: var(--second-title-color);
 margin-bottom: 50px;
 text-align: center;
 }
-
+.team-item{
+    padding-bottom: 30px;
+    border-radius: 0px 0px 4px 4px;
+background: #FFF;
+/* material shadow v1 */
+box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+.team-item:not(:last-child){
+    margin-right: 30px;
+}
 .team-list{
 display: flex;
-}
 
+}
+.team-img{
+    margin-bottom: 30px;
+}
 .team-title-second{
 font-size: 16px;
 font-weight: 500;
@@ -244,7 +259,9 @@ line-height: normal;
 letter-spacing: 0.48px;
 color: var(--second-title-color);
 margin-bottom: 10px ;
+text-align: center;
 }
+
 
 .team-text{
     font-size: 16px;
@@ -252,6 +269,7 @@ margin-bottom: 10px ;
     line-height: normal;
     letter-spacing: 0.48px;
     color: var(--text-color);
+    text-align: center;
 }
 
 /*---------------FOOTRER----------*/
