--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,9 @@ text-align: center;
 
 /* --------------------------team */
 .team{
+    padding-top: 94px;
     padding-bottom: 94px;
+    background: #F5F4FA;
 }
 .team .container{
     display: flex;
