--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ padding-bottom: 25px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
+    outline: 2px solid tomato;
 }
 
 .header .container{
