--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,6 @@ padding-bottom: 25px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-    outline: 2px solid tomato;
 }
 
 .header .container{
@@ -495,6 +494,34 @@ color: var(--text-color);
 
 .footer-link-svg:hover{
     background-color: #2196F3;
+}
+
+.backdrop{
+    position:fixed;
+    top:0;
+    transition: opacity 500ms, visibility 500ms;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(48, 48, 48, 0.48) ;
+}
+
+.modal{
+    width: 500px;   
+    min-height: 500px;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+.modal-close-button{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid #757575;
 }
 
 
