--- a/css/style.css
+++ b/css/style.css
@@ -513,6 +513,7 @@ color: var(--text-color);
     position: absolute;
     top: 50%;
     left: 50%;
+    transform: translate(-50%,-50%);
 }
 .modal-close-button{
     position: absolute;
