--- a/css/style.css
+++ b/css/style.css
@@ -525,4 +525,9 @@ color: var(--text-color);
     border: 1px solid #757575;
 }
 
+.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
 
